2010-05-26  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bug #13379: Sprite Icon API (thanks to Steffen Ritter)
	* Follow-up to bug #14324: Feature: Add spriteGeneratorAPI to support the new sprite-icon-api (thanks to Steffen Ritter)

2010-05-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14333: htmlArea RTE: justify after CTRL+A not working in Firefox

2010-05-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 1.9.3
	* Fixed bug #14470: htmlArea RTE: hovering custom colours produces shivering effect

2010-05-24  Benjamin Mack  <benni@typo3.org>

	* Follow-up to #13379: Sprite Icon API - Removed unused sprites for t3skin (Thanks to Steffen Ritter)
	* Follow-up to #13379: Sprite Icon API - Added updated Sprites for t3skin (Thanks to Steffen Ritter)

2010-05-23  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bug #13868: Integrate TYPO3 donate notice in the backend
	* Fixed bug #14387: Updating the CGLs [was: Remove the feature "Enable extensions without review (basic security check)" from EM] (thanks to Lars Houmark)

2010-05-22  Oliver Hader  <oliver@typo3.org>

	* Added feature #13868: Integrate TYPO3 donate notice in the backend

2010-05-22  Benjamin Mack  <benni@typo3.org>

	* Follow up to #13379: Removed generation parts of Sprite Icon API (Thanks to Steffen Ritter)
	* Fixed bug #12923: Javascript error in tmenu_layers.php & gmenu_layers.php (Thanks to Klaus Goessl)

2010-05-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14191: Install tool lacks hint of how to create ENABLE_INSTALL_TOOL (thanks to Steffen Gebert)
	* Fixed bug #14328: Include prototype+scriptaculous using API at the login screen (thanks to Steffen Gebert)
	* Added Feature #14324: Add spriteGeneratorAPI to support the new sprite-icon-API (thanks to Steffen Ritter)

2010-05-22  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14175: belog not shown / error when actions: error is selected (thanks to Philipp Thiele)
